--- a/styles/globals.css
+++ b/styles/globals.css
@@ -142,7 +142,7 @@ button.btn-green {
 }
 
 button.btn-google {
-  background-color: white;
+  background-color: var(--color-bg);
   color: var(--color-text);
 }
 
@@ -164,7 +164,8 @@ button.btn-logo {
 .card {
   padding: 2rem;
   margin: 1rem 0;
-  background-color: white;
+  background-color: var(--color-bg);
+  color: var(--color-text);
   border: 1px solid var(--color-gray);
   border-radius: 8px;
 }
@@ -215,7 +216,7 @@ input[type="file"] {
 .upload-snippet {
   width: 75%;
   margin-left: auto;
-  background: white;
+  background: var(--color-bg);
   padding: 5px;
   margin: 5px 0;
 }
